<resources>
    <string name="app_name">하루</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="today_todo">오늘 나의 하루</string>
    <string name="today_todo_before_add">나의 하루에 추가</string>
    <string name="today_todo_after_add">나의 하루에 추가됨</string>
    <string name="todo_input">할일 입력</string>
    <string name="subTodo_input">하위 항목 추가</string>
    <string name="tag">태그</string>
    <string name="endDate_set">마감일 설정</string>
    <string name="endDateTime_set">마감 시간 설정</string>
    <string name="alarm_set">알림 설정</string>
    <string name="repeat_set">반복 설정</string>
    <string name="repeat_endDate_set">반복 종료일</string>
    <string name="memo_set">메모 추가</string>
    <string name="important">중요</string>
    <string name="append">추가</string>
    <string name="everyDay">매일</string>
    <string name="everyWeek">매주</string>
    <string name="every2Week">격주</string>
    <string name="everyMonth">매달</string>
    <string name="everyYear">매년</string>
    <string name="MonthDay">%1$d</string>
    <string name="YearMonth">%1$d월</string>
    <string name="loading">로딩 중입니다.</string>
    <string name="Monday">월</string>
    <string name="Tuesday">화</string>
    <string name="Wednesday">수</string>
    <string name="Thursday">목</string>
    <string name="Friday">금</string>
    <string name="Saturday">토</string>
    <string name="Sunday">일</string>
    <string name="SNS">기록</string>
    <string name="TODO">할일</string>
    <string name="CAL">일정</string>
    <string name="T.T">주간</string>
    <string name="MY">마이</string>
    <string name="delete">삭제</string>
    <string name="todoDelete">할일 삭제하기</string>
    <string name="tagDelete">태그 삭제</string>
    <string name="save">저장</string>
    <string name="done">완료</string>
    <string name="classified">분류</string>
    <string name="unClassified">미분류</string>
    <string name="change">수정</string>
    <string name="todoEmpty">모든 할 일을 마쳤습니다!</string>
    <string name="flagEmpty">중요한 할 일이 있나요?</string>
    <string name="completeEmpty">할일을 완료해 보세요!</string>
    <string name="deleteDescription">이 할일을 삭제할까요? 반복되는 할일입니다.</string>
    <string name="updateDescription">수정사항을 저장할까요? 반복되는 할일입니다.</string>
    <string name="notRepeatTodoSave">저장하기</string>
    <string name="notRepeatTodoDelete">삭제하기</string>
    <string name="simpleAddTodo">오늘 할 일 빠른 추가</string>
    <string name="oneDelete">이 할일만 삭제</string>
    <string name="allDelete">모든 할일 삭제</string>
    <string name="afterDelete">이후 할일 삭제</string>
    <string name="oneUpdate">이 할일만 수정</string>
    <string name="allUpdate">모든 할일 수정</string>
    <string name="afterUpdate">이후 반복 할일도 수정</string>
    <string name="cancel">취소</string>
    <string name="am">오전</string>
    <string name="pm">오후</string>
    <string name="endDateToday">오늘까지</string>
    <string name="todoAlarmText">할일 알림</string>
    <string name="relatedTodoText">연관된 할일</string>
    <string name="TopTagFerment">상단에 태그 띄우기</string>
    <string name="textMyHaru">%1s년 %2s월 나의 하루</string>
    <string name="textMonthMyHaru">%1s월</string>
    <string name="percent">%1d%%</string>
    <string name="logoutDescription">%1s 계정에서 로그아웃 할까요?</string>
    <string name="logout">로그아웃</string>
    <string name="searchDescription">검색어를 입력하세요</string>
    <string name="SnsIntroduction">자기소개를 입력해보세요</string>
    <string name="signUpIdDescription">하루 ID는 타 사용자가 나의 계정을 검색할 때 외에 노출되지 않습니다.\nID는 초기 생성 이후 변경이 가능합니다.</string>
    <string name="notAllow">허용 안 함</string>
    <string name="onlyFriend">친구만</string>
    <string name="everyOne">모두 허용</string>
</resources>