<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_calendar_header"
        android:animateLayoutChanges="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="24dp"
        android:paddingTop="28dp"
        android:paddingBottom="14dp">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iv_left_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/small_arrow_right"
            android:backgroundTint="@color/white"
            android:rotation="180" />

        <ImageView
            android:id="@+id/iv_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/small_arrow_right"
            android:backgroundTint="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/days_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_calendar_tail"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:paddingTop="22dp"
        android:paddingBottom="30dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/Sunday"
                android:textColor="@color/light_gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/Monday"
                android:textColor="@color/light_gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/Tuesday"
                android:textColor="@color/light_gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/Wednesday"
                android:textColor="@color/light_gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/Thursday"
                android:textColor="@color/light_gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/Friday"
                android:textColor="@color/light_gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/Saturday"
                android:textColor="@color/light_gray"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"/>


</LinearLayout>
