<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/transparent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="30dp">

    <LinearLayout
        android:id="@+id/layout_parent_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/layout_radius_20_bg"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView_logout_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/text_radius"
            android:gravity="center"
            android:text="@string/logoutDescription"
            android:textColor="@color/date_text"
            android:textSize="14sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_option_logout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/with_divider_btn"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="@color/delete_red"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_option_logout_cancel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/cancel_button_bg"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/date_text"
        android:textSize="20sp" />

</LinearLayout>