<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tag_management_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="3dp"
        android:paddingEnd="20dp"
        android:paddingBottom="17dp">

        <ImageView
            android:id="@+id/iv_back_icon_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_arrow"
            android:backgroundTint="@color/todo_description" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="태그 수정"
            android:textColor="@color/todo_description"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_submit_icon_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/check_icon"
            android:backgroundTint="@color/todo_description" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="34dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp">

        <EditText
            android:id="@+id/et_tag_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="Test"
            android:maxLength="10"
            android:textColor="@color/todo_description"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/update_icon"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="34dp"
        android:paddingTop="14dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/relatedTodoText"
            android:textColor="@color/todo_description"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_related_todo_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="24개"
            android:textColor="@color/date_text"
            android:textSize="16dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingStart="34dp"
        android:paddingTop="14dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TopTagFerment"
            android:textColor="@color/todo_description"
            android:textSize="14dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_tag_visibility"
            style="@style/minSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumb="@drawable/custom_switch_thumb"
            app:track="@drawable/custom_switch" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_tag_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="38dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/tagDelete"
            android:textColor="@color/delete_red"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/big_delete_icon"
            android:backgroundTint="@color/delete_red" />
    </LinearLayout>

</LinearLayout>